Changelog
=========

Head
~~~~

- Fixed string escape issue. [malthe]

- Fixed issue where translation pragma would be reset if a
  non-matching pragma was found. [malthe]

- Fixed bug that would parse global defines incorrectly. [malthe]

- TAL- and METAL-elements now subclass the XHTML-element class; this
  allows mixed usage of TAL and METAL. [malthe]

- `validate`-method is no longer formally required; errors are
  expected to be raised by the `translate`-method. [malthe]

- Formalized character escape requirement; this allows compatibility
  with ZPT with regards to semi-colon escapes in attribute
  declarations. [malthe]

- Allow chained pragmas. [malthe]

1.0b3 (released 11/12/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added default element to parser class. [malthe]

1.0b2 (released 10/28/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed missing attribute. [malthe]

1.0b1 (released 10/14/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Tags are now omitted if a "tal:content" expression evaluates to
  ``None``. This behavior differs from the reference implementation,
  but does away with the need for a similar "tal:condition"
  attribute. [malthe]

1.0a2 (released 10/2/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Add a specialized TemplateLoader. [wichert]

- Fixed an incompatibility where non-boolean values would be returned
  as a skip node value. [malthe]

1.0a1 (released 9/24/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

- First release.

